--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -116,9 +116,11 @@ and (orientation: landscape) {
   .portfolio-parent {
     padding-top: 5%;
     width: 100%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
 
     align-items: center;
   }
@@ -127,8 +129,9 @@ and (orientation: landscape) {
   }
 
   .portfolio-child {
-    margin: 0.5% 0 0.5% 0;
+    margin: 1% 0 1% 0;
     width: 90%;
+    /* height: 43%; */
 
     display: flex;
     flex-direction: row;
@@ -143,26 +146,30 @@ and (orientation: landscape) {
   }
   .portfolio-child a,i {
     margin-left: 1%;
-    font-size: 3.8em;
+    font-size: 3em;
     color: #FA0013;
   }
   .child-detail {
-    position: relative;
     display: flex;
-    flex-direction: column;
+    width: inherit;
+    height: inherit;
+
+    flex-direction: row;
     flex-wrap: wrap;
+
+    justify-content: flex-start;
   }
   .child-detail h1 {
     padding-left: 2%;
     color: #ffffff;
     text-transform: uppercase;
-    font-size: 4em;
+    font-size: 1.4em;
   }
   .child-detail p {
     padding-left: 2%;
     width: 95%;
     color: #888888;
-    font-size: 1.1em;
+    font-size: 1em;
   }
   .child-detail mark.lightgrey {
     color: #888888;
